Adding new class MetadataStore.java to present output in proper format